--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.username=postgres
-spring.datasource.password=password13
+spring.datasource.password=XXXXXX
 spring.datasource.url=jdbc:postgresql://localhost:5432/MyApp
 
 spring.thymeleaf.cache=false
